--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "set NODE_ENV=development&&nodemon --exec babel-node index.js -e js,handlebars",
+    "webpack-dev": "babel-node webpack.development.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,7 +20,7 @@
     "less-loader": "^2.2.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
