--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "socket.io": "^1.5.1"
   }
 }
